--- a/back/.gitignore
+++ b/back/.gitignore
@@ -8,6 +8,9 @@
 # testing
 /coverage
 
+# json files
+/assets/db
+
 # misc
 .env
 .DS_Store
@@ -19,3 +22,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# husky
+/.husky
