--- a/back/package.json
+++ b/back/package.json
@@ -8,7 +8,8 @@
     "format:fix": "prettier --write ./",
     "test": "jest --detectOpenHandles",
     "start": "node server",
-    "dev": "nodemon --ignore 'assets/db/*.json' server"
+    "dev": "nodemon --ignore 'assets/db/*.json' server",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -23,9 +24,14 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "husky": "^8.0.3",
     "jest": "^29.3.1",
+    "lint-staged": "^13.1.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.2",
     "supertest": "^6.3.3"
+  },
+  "lint-staged": {
+    "*./": "prettier --write"
   }
 }
